# photobox-backend-grpc

./: .gitignore  pyproject.toml
photobox_backend_grpc/: main.py  photobox_servicer.py
protos/: photobox_service.proto
scripts/: generate_grpc.sh
tests/: test_photobox_backend_grpc.py
